--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,36 @@ input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance:none;
 }
 
+.select-padding {
+  padding: 0.8rem;
+}
+
+.select-padding option {
+  padding: 0.5rem;
+}
+
+.input-container {
+  display: inline-flex;
+  align-items: center;
+  background-color: #ffffff;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+}
